--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 新入生のためのC言語チュートリアル
+title: 新入生のためのC言語チュートリアル2016 - 苫小牧高専ソフトウェアテクノロジー部
 email: takuya.mk96@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   苫小牧高専ソフトウェアテクノロジー部1年生向けのC言語チュートリアル。
